fix arro on mobile in gallery

--- a/styles/project.css
+++ b/styles/project.css
@@ -137,6 +137,7 @@
   font-size:2rem;
   cursor:pointer;
   padding:.25rem .5rem;
+  z-index:1;
 }
 #imgLightbox .nav.prev{left:1rem}
 #imgLightbox .nav.next{right:1rem}
